Updates for XCode 4.6.2, also state of app for demo at Dallas Drupal Camp

--- a/MobileVideoApp/VideoTableViewCell.xib
+++ b/MobileVideoApp/VideoTableViewCell.xib
@@ -36,26 +36,27 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="313985737">
+					<object class="IBUIImageView" id="1054707249">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 240}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="173608869"/>
+						<reference key="NSNextKeyView" ref="611113401"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">2</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIView" id="381968551">
+					<object class="IBUIView" id="611113401">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<array class="NSMutableArray" key="NSSubviews"/>
 						<string key="NSFrame">{{0, 180}, {320, 60}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="256347069"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -64,13 +65,12 @@
 						<float key="IBUIAlpha">0.60000002384185791</float>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUILabel" id="173608869">
+					<object class="IBUILabel" id="256347069">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 195}, {280, 30}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="381968551"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -101,7 +101,7 @@
 				<string key="NSFrame">{{0, 20}, {320, 240}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="313985737"/>
+				<reference key="NSNextKeyView" ref="1054707249"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -123,7 +123,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">thumbnailImageView</string>
 						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="313985737"/>
+						<reference key="destination" ref="1054707249"/>
 					</object>
 					<int key="connectionID">30</int>
 				</object>
@@ -131,7 +131,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">titleLabel</string>
 						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="173608869"/>
+						<reference key="destination" ref="256347069"/>
 					</object>
 					<int key="connectionID">31</int>
 				</object>
@@ -148,9 +148,9 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="313985737"/>
-							<reference ref="381968551"/>
-							<reference ref="173608869"/>
+							<reference ref="1054707249"/>
+							<reference ref="611113401"/>
+							<reference ref="256347069"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -167,20 +167,20 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
-						<reference key="object" ref="313985737"/>
+						<reference key="object" ref="1054707249"/>
 						<reference key="parent" ref="191373211"/>
 						<string key="objectName">Video Thumbnail Image View</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
-						<reference key="object" ref="381968551"/>
+						<reference key="object" ref="611113401"/>
 						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="191373211"/>
 						<string key="objectName">Title Background</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">19</int>
-						<reference key="object" ref="173608869"/>
+						<reference key="object" ref="256347069"/>
 						<reference key="parent" ref="191373211"/>
 						<string key="objectName">Video Title</string>
 					</object>
